# parkour_challenge

./: README.md  parkour_world.sdf
RoboyParkourTrack/: RoboyParkourChallengeTrack-Simplistic-2019-09-19.stl  RoboyParkourChallengeTrack-Simplistic-2019-09-23.stl  model.config  model.sdf
parkour_dummy_demo/: package.xml
parkour_dummy_demo/scripts/: drive.py
