<?xml version="1.0"?>
<package>
  <name>parkour_dummy_demo</name>
  <version>0.0.1</version>
  <description>Dummy demo for driving on the track</description>

  <maintainer email="unicorn@roboy.org">Alona Kharchenko</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>gazebo_msgs</run_depend>

</package>
